[package]
name = "ryt"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
authors = ["Roman Italian <roman@example.com>"]
description = "RYT - Rust Video Downloader - Fast and reliable video downloader"
license = "MIT"
repository = "https://github.com/ytget/ryt"
keywords = ["downloader", "video", "cli", "streaming"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "color"] }
indicatif = "0.17"
colored = "2.0"

# HTTP
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "stream", "cookies", "cookie_store"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
tokio-util = "0.7"
async-trait = "0.1"

# URL and path handling
url = "2.4"
pathdiff = "0.2"

# Rate limiting
governor = "0.6"

# Caching
moka = { version = "0.12", features = ["future"] }

# JavaScript execution (для расшифровки подписей)
deno_core = "0.242"
regex = "1.10"
rand = "0.8"

# Compression
flate2 = "1.0"
brotli = "3.4"

# Time and duration
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
walkdir = "2.4"
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true